--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -5,15 +5,16 @@ body{
     margin: 0;
     position: relative;
     perspective: 800px;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    overflow: hidden;
+    align-items: center; */
+    padding: 10% 0;
 }
 
 a{
     text-decoration: none;
 }
+
 
 
 
@@ -58,6 +59,25 @@ a.logo{
     width:10px ;
     margin: 22px 0;
 }
+/* 
+    Taille des div 
+*/
+
+.taille-1{
+    width: calc(1vw * 13.8);
+}
+.taille-2{
+    width: calc(1vw * 13.8 *2);
+}
+.taille-3{
+    width: calc(1vw * 13.8 *3);
+}
+.taille-4{
+    width: calc(1vw * 13.8 *4);
+}
+.taille-5{
+    width: calc(1vw * 13.8 *5);
+}
 
 /* 
     Main animation 
@@ -66,9 +86,9 @@ div.home-animation-window{
     z-index: -2;
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     top:0%;
-    left:0;    
+    left:0%;    
     display: flex;
 
 }
