--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -1,6 +1,6 @@
 body{
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: black;
     margin: 0;
     position: relative;
@@ -8,7 +8,7 @@ body{
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    padding: 10% 0;
+    /* padding: 10% 0; */
 }
 
 a{
