--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -38,12 +38,12 @@ a.logo{
     text-align: center;
     text-transform: uppercase;
     color:white;
-    width: 15.3vw;
-    padding: 40px 0 0 16px;
-    z-index: 20;
+    /* width: 15.3vw; */
+    padding: 40px 0 0 0;
+    z-index: 900;
     position: absolute;
     top:0;
-    left: 0;
+    left:55px;
 }
 
 .social{
@@ -54,14 +54,13 @@ a.logo{
 
     display: flex;
     flex-direction: column;
-    margin: 0 0 30px 30px;
+    margin: 0 0 30px 55px;
 }
 .social img{
     display: block;
     width: 18px;
 }
-.social .facebook img{
-    width:10px ;
+.social .linkedin img{
     margin: 22px 0;
 }
 /* 
@@ -200,7 +199,7 @@ div.window-text{
         font-size: 16px;
         line-height: 21px;
     }
-
+/*
 main{
     width: 69%;
     height: 80%;
@@ -371,7 +370,7 @@ main{
 
 
 
-
+*/
 
 /* ANIMATION */
 
