--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -55,6 +55,7 @@ a.logo{
     display: flex;
     flex-direction: column;
     margin: 0 0 30px 55px;
+    z-index: 600;
 }
 .social img{
     display: block;
